# WeatherApp

./: .gitignore  CMakeLists.txt  FetchAPI.cpp  FetchAPI.h  HandleJson.cpp  HandleJson.h  KEYS.h  Location.cpp  Location.h  README.md  Weather.cpp  Weather.h  main.cpp
Backend/: FetchAPI.cpp  FetchAPI.h  HandleJson.cpp  HandleJson.h  Helpers.cpp  Helpers.h  KEYS.cpp  Location.cpp  Location.h  LocationImage.cpp  LocationImage.h  TranslationAPI.cpp  Weather.cpp  Weather.h
Controller/: FetchAPI.cpp  FetchAPI.h  Helpers.cpp  Helpers.h  Location.cpp  Location.h  LocationImage.cpp  LocationImage.h  PredictLocation.cpp  PredictLocation.h  SuggestLocation.cpp  SuggestLocation.h  TranslationAPI.h  Weather.cpp  Weather.h
Frontend/Graphics/Checkbox/: Checkbox.cpp  Checkbox.h
Frontend/Graphics/Containers/: Circle.cpp  Circle.h  Div.cpp  Div.h
Frontend/Graphics/Font/: CustomFont.cpp
Frontend/Graphics/Image/: Image.cpp  Image.h
Frontend/Graphics/Inputs/: Input.cpp
Frontend/Graphics/StaticText/: CelsiusSign.cpp  CelsiusSign.h  StaticText.cpp  StaticText.h
Frontend/Layout/: Chart.cpp  Chart.h  Layout.cpp  Layout.h
Graphics/Containers/: Div.cpp
Graphics/Font/: CustomFont.h
Graphics/Image/: Image.cpp  Image.h
Graphics/Inputs/: Input.cpp  Input.h
View/Graphics/Checkbox/: Checkbox.cpp  Checkbox.h
View/Graphics/Containers/: Circle.cpp  Circle.h  Div.cpp  Div.h
View/Graphics/Font/: CustomFont.cpp  CustomFont.h
View/Graphics/Image/: Image.cpp  Image.h
View/Graphics/Inputs/: Input.cpp  Input.h
View/Graphics/StaticText/: CelsiusSign.cpp  CelsiusSign.h  StaticText.cpp  StaticText.h
View/Layout/: Chart.cpp  Chart.h  Layout.cpp  Layout.h
src/Controller/: Helpers.cpp  Helpers.h  Location.cpp  SuggestLocation.h  TranslationAPI.cpp  TranslationAPI.h  Weather.cpp
src/View/Graphics/Containers/: Div.h
src/View/Graphics/Font/: CustomFont.h
src/View/Graphics/Image/: Image.cpp
src/View/Graphics/Inputs/: Input.cpp  Input.h
src/View/Graphics/StaticText/: CelsiusSign.cpp  StaticText.h
src/View/Layout/: Layout.cpp
